// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PerformanceCommentDataMap > returns correctly formatted output... > while granularity is date 1`] = `
{
  "alternativeUnitId": null,
  "avgDuration": 9000,
  "avgDurationFormatted": "2h 30m 00s",
  "avgDurationVal": 1970-01-01T02:30:00.000Z,
  "color": "#E67E22",
  "date": "2022-01-21",
  "defined": true,
  "entityCount": 1,
  "entityCountLabel": "1",
  "entityGroupId": [
    1,
  ],
  "entityGroupName": "Vaikimisi grupp",
  "entityId": [
    167,
  ],
  "entityKey": "performanceCommentId",
  "entityName": "Konveier 1",
  "factory": null,
  "factoryId": [
    null,
  ],
  "groupingKey": "2022-01-21",
  "idealAltQty": null,
  "idealQty": null,
  "isFake": false,
  "itemGroupingId": "2022-01-21",
  "location": "Teadmata",
  "lossAltQty": 0,
  "lossAltQtyFormatted": "0,00",
  "lossQty": 0,
  "lossQtyFormatted": "0,00",
  "lotCode": null,
  "measure": "2022-01-21",
  "measureLabel": "21",
  "noData": null,
  "notes": null,
  "notesCount": 0,
  "operator": null,
  "operatorId": [
    null,
  ],
  "performancePositionId": [
    0,
  ],
  "product": null,
  "productGroup": null,
  "productGroupId": [
    null,
  ],
  "productId": [
    null,
  ],
  "productionOrder": null,
  "rowProducedAltQty": null,
  "rowProducedQty": null,
  "shiftTemplate": null,
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Eelsorteer 1",
  "stationGroup": "stationGroup",
  "stationGroupId": [
    1,
  ],
  "stationId": [
    53,
  ],
  "tableTimeLabel": "21.01.2022",
  "tooltipXLabel": "21.01.2022",
  "unitId": null,
  "value": 1970-01-01T02:30:00.000Z,
  "valueLabel": "2h 30m 00s",
  "valueSec": 9000,
  "xScaleValue": "2022-01-21",
  "xScaleValueFormatted": "21.01.2022",
}
`;

exports[`PerformanceCommentDataMap > returns correctly formatted output... > while granularity is month 1`] = `
{
  "alternativeUnitId": null,
  "avgDuration": 9000,
  "avgDurationFormatted": "2h 30m 00s",
  "avgDurationVal": 1970-01-01T02:30:00.000Z,
  "color": "#E67E22",
  "date": "2022-01-21",
  "defined": true,
  "entityCount": 1,
  "entityCountLabel": "1",
  "entityGroupId": [
    1,
  ],
  "entityGroupName": "Vaikimisi grupp",
  "entityId": [
    167,
  ],
  "entityKey": "performanceCommentId",
  "entityName": "Konveier 1",
  "factory": null,
  "factoryId": [
    null,
  ],
  "groupingKey": "202201",
  "idealAltQty": null,
  "idealQty": null,
  "isFake": false,
  "itemGroupingId": "202201",
  "location": "Teadmata",
  "lossAltQty": 0,
  "lossAltQtyFormatted": "0,00",
  "lossQty": 0,
  "lossQtyFormatted": "0,00",
  "lotCode": null,
  "measure": "202201",
  "measureLabel": "January",
  "noData": null,
  "notes": null,
  "notesCount": 0,
  "operator": null,
  "operatorId": [
    null,
  ],
  "performancePositionId": [
    0,
  ],
  "product": null,
  "productGroup": null,
  "productGroupId": [
    null,
  ],
  "productId": [
    null,
  ],
  "productionOrder": null,
  "rowProducedAltQty": null,
  "rowProducedQty": null,
  "shiftTemplate": null,
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Eelsorteer 1",
  "stationGroup": "stationGroup",
  "stationGroupId": [
    1,
  ],
  "stationId": [
    53,
  ],
  "tableTimeLabel": "January",
  "tooltipXLabel": "01.01.2022 - 31.01.2022",
  "unitId": null,
  "value": 1970-01-01T02:30:00.000Z,
  "valueLabel": "2h 30m 00s",
  "valueSec": 9000,
  "xScaleValue": "202201",
  "xScaleValueFormatted": "01.01.2022 - 31.01.2022",
}
`;

exports[`PerformanceCommentDataMap > returns correctly formatted output... > while granularity is total 1`] = `
{
  "alternativeUnitId": null,
  "avgDuration": 9000,
  "avgDurationFormatted": "2h 30m 00s",
  "avgDurationVal": 1970-01-01T02:30:00.000Z,
  "color": "#E67E22",
  "date": "2022-01-21",
  "defined": true,
  "entityCount": 1,
  "entityCountLabel": "1",
  "entityGroupId": [
    1,
  ],
  "entityGroupName": "Vaikimisi grupp",
  "entityId": [
    167,
  ],
  "entityKey": "performanceCommentId",
  "entityName": "Konveier 1",
  "factory": null,
  "factoryId": [
    null,
  ],
  "groupingKey": 167,
  "idealAltQty": null,
  "idealQty": null,
  "isFake": false,
  "itemGroupingId": 167,
  "location": "Teadmata",
  "lossAltQty": 0,
  "lossAltQtyFormatted": "0,00",
  "lossQty": 0,
  "lossQtyFormatted": "0,00",
  "lotCode": "LOT-001",
  "measure": 167,
  "measureLabel": "Konveier 1",
  "noData": null,
  "notes": null,
  "notesCount": 0,
  "operator": null,
  "operatorId": [
    null,
  ],
  "performancePositionId": [
    0,
  ],
  "product": null,
  "productGroup": null,
  "productGroupId": [
    null,
  ],
  "productId": [
    null,
  ],
  "productionOrder": "ORDER-42",
  "rowProducedAltQty": null,
  "rowProducedQty": null,
  "shiftTemplate": null,
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Eelsorteer 1",
  "stationGroup": "stationGroup",
  "stationGroupId": [
    1,
  ],
  "stationId": [
    53,
  ],
  "tableTimeLabel": "Konveier 1",
  "tooltipXLabel": "Konveier 1",
  "unitId": null,
  "value": 1970-01-01T02:30:00.000Z,
  "valueLabel": "2h 30m 00s",
  "valueSec": 9000,
  "xScaleValue": 167,
  "xScaleValueFormatted": "",
}
`;

exports[`PerformanceCommentDataMap > returns correctly formatted output... > while granularity is weekofyear 1`] = `
{
  "alternativeUnitId": null,
  "avgDuration": 9000,
  "avgDurationFormatted": "2h 30m 00s",
  "avgDurationVal": 1970-01-01T02:30:00.000Z,
  "color": "#E67E22",
  "date": "2022-01-21",
  "defined": true,
  "entityCount": 1,
  "entityCountLabel": "1",
  "entityGroupId": [
    1,
  ],
  "entityGroupName": "Vaikimisi grupp",
  "entityId": [
    167,
  ],
  "entityKey": "performanceCommentId",
  "entityName": "Konveier 1",
  "factory": null,
  "factoryId": [
    null,
  ],
  "groupingKey": "202203",
  "idealAltQty": null,
  "idealQty": null,
  "isFake": false,
  "itemGroupingId": "202203",
  "location": "Teadmata",
  "lossAltQty": 0,
  "lossAltQtyFormatted": "0,00",
  "lossQty": 0,
  "lossQtyFormatted": "0,00",
  "lotCode": null,
  "measure": "202203",
  "measureLabel": "3",
  "noData": null,
  "notes": null,
  "notesCount": 0,
  "operator": null,
  "operatorId": [
    null,
  ],
  "performancePositionId": [
    0,
  ],
  "product": null,
  "productGroup": null,
  "productGroupId": [
    null,
  ],
  "productId": [
    null,
  ],
  "productionOrder": null,
  "rowProducedAltQty": null,
  "rowProducedQty": null,
  "shiftTemplate": null,
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Eelsorteer 1",
  "stationGroup": "stationGroup",
  "stationGroupId": [
    1,
  ],
  "stationId": [
    53,
  ],
  "tableTimeLabel": "Week 3",
  "tooltipXLabel": "Week 3",
  "unitId": null,
  "value": 1970-01-01T02:30:00.000Z,
  "valueLabel": "2h 30m 00s",
  "valueSec": 9000,
  "xScaleValue": "202203",
  "xScaleValueFormatted": "Week 3",
}
`;

exports[`PerformanceCommentDataMap > returns correctly formatted output... > while granularity is year 1`] = `
{
  "alternativeUnitId": null,
  "avgDuration": 9000,
  "avgDurationFormatted": "2h 30m 00s",
  "avgDurationVal": 1970-01-01T02:30:00.000Z,
  "color": "#E67E22",
  "date": "2022-01-21",
  "defined": true,
  "entityCount": 1,
  "entityCountLabel": "1",
  "entityGroupId": [
    1,
  ],
  "entityGroupName": "Vaikimisi grupp",
  "entityId": [
    167,
  ],
  "entityKey": "performanceCommentId",
  "entityName": "Konveier 1",
  "factory": null,
  "factoryId": [
    null,
  ],
  "groupingKey": "2022",
  "idealAltQty": null,
  "idealQty": null,
  "isFake": false,
  "itemGroupingId": "2022",
  "location": "Teadmata",
  "lossAltQty": 0,
  "lossAltQtyFormatted": "0,00",
  "lossQty": 0,
  "lossQtyFormatted": "0,00",
  "lotCode": null,
  "measure": "2022",
  "measureLabel": "2022",
  "noData": null,
  "notes": null,
  "notesCount": 0,
  "operator": null,
  "operatorId": [
    null,
  ],
  "performancePositionId": [
    0,
  ],
  "product": null,
  "productGroup": null,
  "productGroupId": [
    null,
  ],
  "productId": [
    null,
  ],
  "productionOrder": null,
  "rowProducedAltQty": null,
  "rowProducedQty": null,
  "shiftTemplate": null,
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Eelsorteer 1",
  "stationGroup": "stationGroup",
  "stationGroupId": [
    1,
  ],
  "stationId": [
    53,
  ],
  "tableTimeLabel": "2022",
  "tooltipXLabel": "2022",
  "unitId": null,
  "value": 1970-01-01T02:30:00.000Z,
  "valueLabel": "2h 30m 00s",
  "valueSec": 9000,
  "xScaleValue": "2022",
  "xScaleValueFormatted": "2022",
}
`;

exports[`returns correctly unformatted output... > while granularity is date 1`] = `
{
  "alternativeUnitId": null,
  "avgDuration": null,
  "avgDurationFormatted": null,
  "avgDurationVal": null,
  "color": "#E67E22",
  "date": "2022-01-21",
  "defined": null,
  "entityCount": 1,
  "entityCountLabel": 1,
  "entityGroupId": 1,
  "entityGroupName": "Vaikimisi grupp",
  "entityId": 167,
  "entityKey": null,
  "entityName": "Konveier 1",
  "factory": null,
  "factoryId": null,
  "groupingKey": null,
  "idealAltQty": null,
  "idealQty": null,
  "isFake": false,
  "itemGroupingId": "2022-01-21",
  "location": "Teadmata",
  "lossAltQty": null,
  "lossAltQtyFormatted": null,
  "lossQty": null,
  "lossQtyFormatted": null,
  "lotCode": null,
  "measure": "2022-01-21",
  "measureLabel": "2022-01-21",
  "noData": null,
  "notes": null,
  "notesCount": 0,
  "operator": null,
  "operatorId": null,
  "performancePositionId": 0,
  "product": null,
  "productGroup": null,
  "productGroupId": null,
  "productId": null,
  "productionOrder": null,
  "rowProducedAltQty": null,
  "rowProducedQty": null,
  "shiftTemplate": null,
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Eelsorteer 1",
  "stationGroup": "stationGroup",
  "stationGroupId": 1,
  "stationId": 53,
  "tableTimeLabel": "2022-01-21",
  "tooltipXLabel": "2022-01-21",
  "unitId": null,
  "value": 9000,
  "valueLabel": 9000,
  "valueSec": 9000,
  "xScaleValue": "2022-01-21",
  "xScaleValueFormatted": "2022-01-21",
}
`;

exports[`returns correctly unformatted output... > while granularity is month 1`] = `
{
  "alternativeUnitId": null,
  "avgDuration": null,
  "avgDurationFormatted": null,
  "avgDurationVal": null,
  "color": "#E67E22",
  "date": "2022-01-21",
  "defined": null,
  "entityCount": 1,
  "entityCountLabel": 1,
  "entityGroupId": 1,
  "entityGroupName": "Vaikimisi grupp",
  "entityId": 167,
  "entityKey": null,
  "entityName": "Konveier 1",
  "factory": null,
  "factoryId": null,
  "groupingKey": null,
  "idealAltQty": null,
  "idealQty": null,
  "isFake": false,
  "itemGroupingId": "202201",
  "location": "Teadmata",
  "lossAltQty": null,
  "lossAltQtyFormatted": null,
  "lossQty": null,
  "lossQtyFormatted": null,
  "lotCode": null,
  "measure": "202201",
  "measureLabel": "202201",
  "noData": null,
  "notes": null,
  "notesCount": 0,
  "operator": null,
  "operatorId": null,
  "performancePositionId": 0,
  "product": null,
  "productGroup": null,
  "productGroupId": null,
  "productId": null,
  "productionOrder": null,
  "rowProducedAltQty": null,
  "rowProducedQty": null,
  "shiftTemplate": null,
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Eelsorteer 1",
  "stationGroup": "stationGroup",
  "stationGroupId": 1,
  "stationId": 53,
  "tableTimeLabel": "202201",
  "tooltipXLabel": "202201",
  "unitId": null,
  "value": 9000,
  "valueLabel": 9000,
  "valueSec": 9000,
  "xScaleValue": "202201",
  "xScaleValueFormatted": "202201",
}
`;

exports[`returns correctly unformatted output... > while granularity is total 1`] = `
{
  "alternativeUnitId": null,
  "avgDuration": null,
  "avgDurationFormatted": null,
  "avgDurationVal": null,
  "color": "#E67E22",
  "date": "2022-01-21",
  "defined": null,
  "entityCount": 1,
  "entityCountLabel": 1,
  "entityGroupId": 1,
  "entityGroupName": "Vaikimisi grupp",
  "entityId": 167,
  "entityKey": null,
  "entityName": "Konveier 1",
  "factory": null,
  "factoryId": null,
  "groupingKey": null,
  "idealAltQty": null,
  "idealQty": null,
  "isFake": false,
  "itemGroupingId": 167,
  "location": "Teadmata",
  "lossAltQty": null,
  "lossAltQtyFormatted": null,
  "lossQty": null,
  "lossQtyFormatted": null,
  "lotCode": "LOT-001",
  "measure": 167,
  "measureLabel": "Konveier 1",
  "noData": null,
  "notes": null,
  "notesCount": 0,
  "operator": null,
  "operatorId": null,
  "performancePositionId": 0,
  "product": null,
  "productGroup": null,
  "productGroupId": null,
  "productId": null,
  "productionOrder": "ORDER-42",
  "rowProducedAltQty": null,
  "rowProducedQty": null,
  "shiftTemplate": null,
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Eelsorteer 1",
  "stationGroup": "stationGroup",
  "stationGroupId": 1,
  "stationId": 53,
  "tableTimeLabel": "Konveier 1",
  "tooltipXLabel": "Konveier 1",
  "unitId": null,
  "value": 9000,
  "valueLabel": 9000,
  "valueSec": 9000,
  "xScaleValue": 167,
  "xScaleValueFormatted": 167,
}
`;

exports[`returns correctly unformatted output... > while granularity is weekofyear 1`] = `
{
  "alternativeUnitId": null,
  "avgDuration": null,
  "avgDurationFormatted": null,
  "avgDurationVal": null,
  "color": "#E67E22",
  "date": "2022-01-21",
  "defined": null,
  "entityCount": 1,
  "entityCountLabel": 1,
  "entityGroupId": 1,
  "entityGroupName": "Vaikimisi grupp",
  "entityId": 167,
  "entityKey": null,
  "entityName": "Konveier 1",
  "factory": null,
  "factoryId": null,
  "groupingKey": null,
  "idealAltQty": null,
  "idealQty": null,
  "isFake": false,
  "itemGroupingId": "202203",
  "location": "Teadmata",
  "lossAltQty": null,
  "lossAltQtyFormatted": null,
  "lossQty": null,
  "lossQtyFormatted": null,
  "lotCode": null,
  "measure": "202203",
  "measureLabel": "202203",
  "noData": null,
  "notes": null,
  "notesCount": 0,
  "operator": null,
  "operatorId": null,
  "performancePositionId": 0,
  "product": null,
  "productGroup": null,
  "productGroupId": null,
  "productId": null,
  "productionOrder": null,
  "rowProducedAltQty": null,
  "rowProducedQty": null,
  "shiftTemplate": null,
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Eelsorteer 1",
  "stationGroup": "stationGroup",
  "stationGroupId": 1,
  "stationId": 53,
  "tableTimeLabel": "202203",
  "tooltipXLabel": "202203",
  "unitId": null,
  "value": 9000,
  "valueLabel": 9000,
  "valueSec": 9000,
  "xScaleValue": "202203",
  "xScaleValueFormatted": "202203",
}
`;

exports[`returns correctly unformatted output... > while granularity is year 1`] = `
{
  "alternativeUnitId": null,
  "avgDuration": null,
  "avgDurationFormatted": null,
  "avgDurationVal": null,
  "color": "#E67E22",
  "date": "2022-01-21",
  "defined": null,
  "entityCount": 1,
  "entityCountLabel": 1,
  "entityGroupId": 1,
  "entityGroupName": "Vaikimisi grupp",
  "entityId": 167,
  "entityKey": null,
  "entityName": "Konveier 1",
  "factory": null,
  "factoryId": null,
  "groupingKey": null,
  "idealAltQty": null,
  "idealQty": null,
  "isFake": false,
  "itemGroupingId": "2022",
  "location": "Teadmata",
  "lossAltQty": null,
  "lossAltQtyFormatted": null,
  "lossQty": null,
  "lossQtyFormatted": null,
  "lotCode": null,
  "measure": "2022",
  "measureLabel": "2022",
  "noData": null,
  "notes": null,
  "notesCount": 0,
  "operator": null,
  "operatorId": null,
  "performancePositionId": 0,
  "product": null,
  "productGroup": null,
  "productGroupId": null,
  "productId": null,
  "productionOrder": null,
  "rowProducedAltQty": null,
  "rowProducedQty": null,
  "shiftTemplate": null,
  "shiftTemplateLabel": null,
  "singleOperator": null,
  "sku": null,
  "skuLabel": null,
  "station": "Eelsorteer 1",
  "stationGroup": "stationGroup",
  "stationGroupId": 1,
  "stationId": 53,
  "tableTimeLabel": "2022",
  "tooltipXLabel": "2022",
  "unitId": null,
  "value": 9000,
  "valueLabel": 9000,
  "valueSec": 9000,
  "xScaleValue": "2022",
  "xScaleValueFormatted": "2022",
}
`;
